--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  NOTES WHEN UPGRADING:

  CHANGES:

  FEATURES:

  IMPROVEMENTS:

  BUGFIXES:

  DOCUMENTATION:

  API BREAKS:

  TESTING:

  INTERNALS:


bzr 1.3rc1 2008-03-16
---------------------

Bazaar has become part of the GNU project <http://www.gnu.org>

Many operations that act on history, including ``log`` and ``annotate`` are now
substantially faster.  Several bugs have been fixed and several new options and
features have been added.

  NOTES WHEN UPGRADING:

    No special action is required from the user for this release.

  CHANGES:

    * A new repository format 'development' has been added. This format will
      represent the latest 'in-progress' format that the bzr developers are
      interested in getting early-adopter testing and feedback on.
      ``doc/developers/development-repo.txt`` has detailed information.
      (Robert Collins)

    * BZR_LOG environment variable controls location of .bzr.log trace file. 
      User can suppress writing messages to .bzr.log by using '/dev/null'
      filename (on Linux) or 'NUL' (on Windows). If BZR_LOG variable 
      is not defined but BZR_HOME is defined then default location
      for .bzr.log trace file is ``$BZR_HOME/.bzr.log``.
      (Alexander Belchenko)

    * ``launchpad`` builtin plugin now shipped as separate part in standalone
      bzr.exe, installed to ``C:\Program Files\Bazaar\plugins`` directory, 
      and standalone installer allows user to skip installation of this plugin.
      (Alexander Belchenko)

    * Restore auto-detection of plink.exe on Windows. (Dmitry Vasiliev)

    * Version number is now shown as "1.2" or "1.2pr2", without zeroed or
      missing final fields.  (Martin Pool)

    * The backup directory created by ``upgrade`` is now called
      ``backup.bzr``, not ``.bzr.backup``. (Martin Albisetti)

  FEATURES:
